	  then the FAT FS will use platform-provided DMA memory allocators
	  to allocate the block driver I/O buffers.
	* CONFIG_NET_ENC28J60 renamed CONFIG_ENC28J60 to be consistent
	  in all places.
	* drivers/enc28j60.c, include/nuttx/net/enc28j60.h, and 
	  olimex-strp711/src/up_enc28j60.c:  No longer passes IRQ number
	  as a parameters.  Instead now passes a call table to manage
	  ENC28J60 GPIO interrupts.  That is because GPIO interrupts are
	  handled in different ways by different MCUs and some do not
	  support IRQ numbers for GPIO interrupts.
	* mm/mm_gran* and include/nuttx/gran.h:  Add a simple granule-
	  based allocator.  The intent of this allocator is to support
	  simple allocation of DMA I/O buffers.  The initiali check-in
	  is code complete but untested (not event built into the
	  mm/Makefile yet.
	* confgs/fire-stm32v2: The board port is basically functional.
	  Not all features have been verified.  The ENC28J60 network
	  is not yet functional.
	* configs/stm3240g-eval/discover:  A configuration for testing
	  the UDP discovery utility.  Contributed by Max Holtzberg.
	* mm/README.txt:  Add a new README file.
	* include/nuttx/usb/usb.h, arch/*/src/*usb.c, and arch/*/src/*otg*.c:
	  Add hooks to to use common, external DMA buffer allocation
	  implementation.
	* net/recvfrom.c: Don't block in recvfrom if (1) read-ahead buffering
	  is enabled and (2) some data was obtained from read-ahead buffers.
	  Blocking is a bad idea in that case because there is no timeout!
	  (submitted by Max Holtzberg).
	* configs/stm3240g-eval/xmlrpc: An example configuration for the
	  Embeddable Lightweight XML-RPC Server at apps/examples/xmlrpc.
	  See http://www.drdobbs.com/web-development/\
	  an-embeddable-lightweight-xml-rpc-server/184405364 for more info.
	  Contributed by Max Holtzberg.
	* configs/*/nxwm/defconfig and sched/task_exithook.c: Fixes for
	  bugs that crept in during recent changes.  (Submitted by Max
	  Holtzberg).